--- a/templates/init.d/dynaTraceFrontendServer.erb
+++ b/templates/init.d/dynaTraceFrontendServer.erb
@@ -1,12 +1,11 @@
 #!/bin/sh
-### Start/Stop dynaTrace Server daemon
+### Start/Stop Dynatrace Server daemon
 #
-# Copyright 2004-2012 dynaTrace Software
+# Copyright 2004-2016 Dynatrace Software
 # All rights reserved.
 #
 # Copy this script to /etc/init.d and use chkconfig for enabling/disabling
-# the daemon. In order to run multiple Servers/Collectors on the same host,
-# further adjustments may be necessary.
+# the daemon. Depending on the target environment adjustments may be necessary.
 #
 ### BEGIN INIT INFO
 # Provides: dynaTraceServer
@@ -15,78 +14,95 @@
 # X-UnitedLinux-Should-Start:
 # Default-Start: <%= @params["linux_service_start_runlevels"] %>
 # Default-Stop: <%= @params["linux_service_stop_runlevels"] %>
-# Description: Start/Stop dynaTrace FrontendServer daemon
+# Description: Start/Stop Dynatrace FrontendServer daemon
 ### END INIT INFO
 
 # To use this file in your environment, adjusting the following variables:
-# - DT_HOME     installation directory of dynaTrace software
-# - DT_OPTARGS  optional arguments (e.g. -vm, -instance, -server, etc.)
-# - DT_INSTANCE instance name - requires port offset in DT_OPTARGS
+# - DT_HOME     installation directory of Dynatrace software
+# - DT_OPTARGS  optional arguments (e.g. -vm, -server, etc.)
+# - DT_RUNASUSER  the user to run the Dynatrace process
+
 DT_HOME=<%= @params["installer_prefix_dir"] %>/dynatrace
 DT_OPTARGS=
-DT_INSTANCE=
+
+DT_RUNASUSER=<%= @params["user"] %>
 
 DT_PRODUCT=FrontendServer
 DT_BINARY=dtfrontendserver
 
-DT_PIDFILE=/var/run/$DT_BINARY.pid
-if [ -n "$DT_INSTANCE" ]; then
-  DT_PIDFILE=/var/run/$DT_BINARY.$DT_INSTANCE.pid
+# How long to wait for shutdown
+DT_SHUTDOWN_WAIT=60
+
+DT_PIDFILE_DIR=/tmp
+
+DT_PIDFILE=${DT_PIDFILE_DIR}/${DT_BINARY}63.pid
+
+if [ ! -x "${DT_HOME}/${DT_BINARY}" ]; then
+  echo "File not found or not executable: ${DT_HOME}/${DT_BINARY}"
+  exit
 fi
-if [ ! -x "$DT_HOME/$DT_BINARY" ]; then
-  echo "File not found or not executable: $DT_HOME/$DT_BINARY"
-  exit 1
+if [ -f "${DT_PIDFILE}" ]; then
+  PROCESSPID=$(cat ${DT_PIDFILE})
 fi
-if [ -f "$DT_PIDFILE" ]; then
-  PROCESSPID=$(cat $DT_PIDFILE)
-fi
-if [ -z "$PROCESSPID" ]; then
-  RPID=$(ps -C $DT_BINARY -o pid --no-headers | awk '{printf "%s|", $0}' | awk '{sub(/\|$/,""); printf $0}')
+if [ -z "${PROCESSPID}" ]; then
+  DT_FE_BINARY_GREP=`echo ${DT_BINARY} | cut -c1-8`
+  RPID=`ps -A -o pid,comm | grep ${DT_FE_BINARY_GREP} | awk '{ printf "%s", $1 }'`
+  #RPID=$(ps -C ${DT_BINARY} -o pid --no-headers | awk '{printf "%s|", $0}' | awk '{sub(/\|$/,""); printf $0}')
   if [ ! -z "$RPID" ]; then
-    if [ -z "$DT_INSTANCE" ]; then
-      PROCESSPID=$(ps -ef | grep -v "instance" | grep $DT_BINARY | awk '{{print $2}}' | grep -E $RPID)
-    else
-      PROCESSPID=$(ps -ef | grep $DT_BINARY | grep " $DT_INSTANCE " | awk '{{print $2}}' | grep -E $RPID)
-    fi
+    PROCESSPID=$(ps -ef | grep ${DT_BINARY} | awk '{{print $2}}' | grep ${RPID})
   fi
 fi
 
 case "$1" in
 'start')
-  if [ -z "$PROCESSPID" ]; then
-    if [ -z "$DT_INSTANCE" ]; then
-      echo ${DT_HOME}/${DT_BINARY} -bg $DT_OPTARGS
-      su - dynatrace -c "${DT_HOME}/${DT_BINARY} -bg $DT_OPTARGS"
+    if [ -z "${PROCESSPID}" ]; then
+    if [ -z "${DT_RUNASUSER}" ]; then
+      echo "${DT_HOME}"/${DT_BINARY} -bg ${DT_OPTARGS}
+      "${DT_HOME}"/${DT_BINARY} -bg ${DT_OPTARGS}
+      echo $! >${DT_PIDFILE}
     else
-      echo ${DT_HOME}/${DT_BINARY} -instance $DT_INSTANCE -bg $DT_OPTARGS
-      su - dynatrace -c "${DT_HOME}/${DT_BINARY} -instance $DT_INSTANCE -bg $DT_OPTARGS"
-    fi    
-  else
-    echo "dynaTrace $DT_PRODUCT daemon is already running!"
-  fi
-  ;;
-'stop')
-  if [ -n "$PROCESSPID" ]; then
-    echo "Terminating dynaTrace $DT_PRODUCT process $PROCESSPID"
-    kill -15 $PROCESSPID
-  fi
-  ;;
-'version')
-  $DT_HOME/$DT_BINARY -v
-  ;;
-'status')
-  if [ -n "$PROCESSPID" ]; then
-    echo "dynaTrace $DT_PRODUCT daemon is running:"
-    ps -ef | grep $DT_BINARY | grep $PROCESSPID
-      # | grep -v org.eclipse.equinox
-  else
-    echo "dynaTrace $DT_PRODUCT daemon not running."
+      echo "${DT_HOME}"/${DT_BINARY} -bg ${DT_OPTARGS}
+      su -c "${DT_HOME}/${DT_BINARY} -bg ${DT_OPTARGS}" "${DT_RUNASUSER}"
+      echo $! >${DT_PIDFILE}
+    fi
+    else
+    echo "Dynatrace ${DT_PRODUCT} daemon is already running!"
     exit 1
-  fi
-  ;;
-*)
-  echo "usage: $0 {start|stop|status|version}"
-  ;;
-esac
+    fi
+    ;;
+'stop')
+    if [ -n "${PROCESSPID}" ]; then
+      echo "Terminating Dynatrace $DT_PRODUCT process ${PROCESSPID}"
+      kill -15 ${PROCESSPID}
+    COUNT=0;
+      while [ `ps -A -o pid | grep -c ${PROCESSPID}` -gt 0 ] && [ "${COUNT}" -lt "${DT_SHUTDOWN_WAIT}" ] # `ps --pid ${PROCESSPID} | grep -c ${PROCESSPID}` -ne 0]
+      do
+        echo "Waiting for Dynatrace ${DT_PRODUCT} (${PROCESSPID}) to finish shutdown";
+        sleep 1
+        COUNT=`expr ${COUNT} + 1`
+      done
 
-exit 0
+      if [ "${COUNT}" -gt "${DT_SHUTDOWN_WAIT}" ]; then
+        echo "Killing Dynatrace ${DT_PRODUCT} (${PROCESSPID}) because the shutdown lasted longer than ${DT_SHUTDOWN_WAIT} seconds"
+        kill -9 ${PROCESSPID}
+      fi
+    if [ -f "${DT_PIDFILE}" ]; then
+      rm -f ${DT_PIDFILE}
+    fi
+    fi
+    ;;
+'version')
+    "${DT_HOME}"/${DT_BINARY} -v
+    ;;
+'status')
+    if [ -n "${PROCESSPID}" ]; then
+    echo "Dynatrace ${DT_PRODUCT} daemon is running:"
+    ps -ef | grep ${DT_BINARY} | grep ${PROCESSPID}
+    else
+    echo "Dynatrace ${DT_PRODUCT} daemon not running."
+    fi
+    ;;
+*)
+    echo "usage: $0 {start|stop|status|version}"
+    ;;
+esac
