--- a/templates/init.d/dynaTraceAnalysis.erb
+++ b/templates/init.d/dynaTraceAnalysis.erb
@@ -1,7 +1,7 @@
 #!/bin/sh
-### Start/Stop dynaTrace Analysis Server daemon
+### Start/Stop Dynatrace Analysis Server daemon
 #
-# Copyright 2004-2012 dynaTrace Software
+# Copyright 2004-2016 Dynatrace Software
 # All rights reserved.
 #
 # Copy this script to /etc/init.d and use chkconfig for enabling/disabling
@@ -14,57 +14,92 @@
 # X-UnitedLinux-Should-Start:
 # Default-Start: <%= @params["linux_service_start_runlevels"] %>
 # Default-Stop: <%= @params["linux_service_stop_runlevels"] %>
-# Description: Start/Stop dynaTrace Analysis Server daemon
+# Description: Start/Stop Dynatrace Analysis Server daemon
 ### END INIT INFO
 
 # To use this file in your environment, adjusting the following variables:
-# - DT_HOME    installation directory of dynaTrace software
-# - DT_OPTARGS optional arguments (e.g. -vm, -instance, -server, etc.)
+# - DT_HOME    installation directory of Dynatrace software
+# - DT_OPTARGS optional arguments (e.g. -vm, -server, etc.)
+# - DT_RUNASUSER  the user to run the Dynatrace process
+
 DT_HOME=<%= @params["installer_prefix_dir"] %>/dynatrace
 DT_OPTARGS="-Dcom.dynatrace.diagnostics.listen=:<%= @params["server_port"] %><% if @params["jvm_xms"] %> -Xms<%= @params["jvm_xms"] %><% end %><% if @params["jvm_xmx"] %> -Xmx<%= @params["jvm_xmx"] %><% end %><% if @params["jvm_perm_size"] %> -XX:PermSize=<%= @params["jvm_perm_size"] %><% end %><% if @params["jvm_max_perm_size"] %> -XX:MaxPermSize=<%= @params["jvm_max_perm_size"] %><% end %>"
 
 DT_PRODUCT="Memory Analysis Server"
 DT_BINARY=dtanalysisserver
 
-DT_PIDFILE=/var/run/$DT_BINARY.pid
-if [ ! -x "$DT_HOME/$DT_BINARY" ]; then
-  echo "File not found or not executable: $DT_HOME/$DT_BINARY"
-  exit 1
+DT_RUNASUSER=<%= @params["user"] %>
+
+# How long to wait for shutdown
+DT_SHUTDOWN_WAIT=60
+
+DT_PIDFILE_DIR=/tmp
+
+DT_PIDFILE=${DT_PIDFILE_DIR}/${DT_BINARY}63.pid
+
+if [ ! -x "${DT_HOME}/${DT_BINARY}" ]; then
+  echo "File not found or not executable: ${DT_HOME}/${DT_BINARY}"
+  exit
 fi
-if [ -f "$DT_PIDFILE" ]; then
-  PROCESSPID=`cat $DT_PIDFILE`
+if [ -f "${DT_PIDFILE}" ]; then
+  PROCESSPID=`cat ${DT_PIDFILE}`
 fi
-if [ -z "$PROCESSPID" ]; then
-  GREPARG=`echo $DT_BINARY | cut -c1-8`
-  PROCESSPID=`ps -e | grep $GREPARG | awk '{{print $1}}'`
+if [ -z "${PROCESSPID}" ]; then
+  GREPARG=`echo ${DT_BINARY} | cut -c1-8`
+  PROCESSPID=`ps -e | grep ${GREPARG} | awk '{{print $1}}'`
 fi
 
 case "$1" in
 'start')
-    su - dynatrace -c "$DT_HOME/$DT_BINARY -bg $DT_OPTARGS"
+    if [ -z "${PROCESSPID}" ]; then
+    if [ -z "${DT_RUNASUSER}" ]; then
+      echo "${DT_HOME}"/${DT_BINARY} -bg ${DT_OPTARGS}
+      "${DT_HOME}"/${DT_BINARY} -bg ${DT_OPTARGS}
+      echo $! >${DT_PIDFILE}
+    else  
+      echo "${DT_HOME}"/${DT_BINARY} -bg ${DT_OPTARGS}
+      su -c "${DT_HOME}/${DT_BINARY} -bg ${DT_OPTARGS}" "${DT_RUNASUSER}"
+      echo $! >${DT_PIDFILE}
+    fi    
+    else
+    echo "Dynatrace ${DT_PRODUCT} daemon is already running!"
+    exit 1
+    fi
     ;;
 'stop')
-    if [ -n "$PROCESSPID" ]; then
-      echo "Terminating dynaTrace $DT_PRODUCT process $PROCESSPID"
-      kill -15 $PROCESSPID
+    if [ -n "${PROCESSPID}" ]; then
+      echo "Terminating Dynatrace ${DT_PRODUCT} process ${PROCESSPID}"
+      kill -15 ${PROCESSPID}
+        COUNT=0;
+      while [ `ps -A -o pid | grep -c ${PROCESSPID}` -gt 0 ] && [ "${COUNT}" -lt "${DT_SHUTDOWN_WAIT}" ] # `ps --pid ${PROCESSPID} | grep -c ${PROCESSPID}` -ne 0]
+      do
+        echo "Waiting for Dynatrace ${DT_PRODUCT} (${PROCESSPID}) to finish shutdown";
+        sleep 1
+        COUNT=`expr ${COUNT} + 1`
+      done
+
+      if [ "${COUNT}" -gt "${DT_SHUTDOWN_WAIT}" ]; then
+        echo "Killing Dynatrace ${DT_PRODUCT} (${PROCESSPID}) because the shutdown lasted longer than ${DT_SHUTDOWN_WAIT} seconds"
+        kill -9 ${PROCESSPID}
+      fi
+    if [ -f "${DT_PIDFILE}" ]; then 
+      rm -f ${DT_PIDFILE}
+    fi
     fi
     ;;
 'version')
-    $DT_HOME/$DT_BINARY -v
+    "${DT_HOME}"/${DT_BINARY} -v
     ;;
 'status')
-    if [ -n "$PROCESSPID" ]; then
-      echo "dynaTrace $DT_PRODUCT daemon is running:"
-      ps -ef | grep $DT_BINARY | grep $PROCESSPID
+    if [ -n "${PROCESSPID}" ]; then
+      echo "Dynatrace ${DT_PRODUCT} daemon is running:"
+      ps -ef | grep ${DT_BINARY} | grep ${PROCESSPID}
         # | grep -v org.eclipse.equinox
     else
-      echo "dynaTrace $DT_PRODUCT daemon not running."
-      exit 1
+      echo "Dynatrace ${DT_PRODUCT} daemon not running."
     fi
     ;;
 *)
     echo "usage: $0 {start|stop|status|version}"
     ;;
 esac
-
-exit 0
